date change issuse fix and review comments fixes

--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,9 @@
     <script src="scripts/controllers/voucherdetailsCntl.js"></script>
     <script src="scripts/controllers/vouchersettingsCntl.js"></script>
     <script src="scripts/services/dataMove.js"></script>
+    <script src="scripts/directives/outsideClick.js"></script>
+    <script src="scripts/filters/INRCurrency.js"></script>
+
     <script src="scripts/controllers/searchCntl.js"></script>
     <script src="scripts/controllers/bootstrap-multiselect.js "></script>
 
