mobile Ui for companys and locations page

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -25,6 +25,7 @@
 
 <body ng-app="mobiDashBoardApp">
     <!-- header file inclusion -->
+    <!-- <header ng-show="mobileheader" ng-include src="'views/m.header.html'"></header> -->
     <header ng-show="showheader" ng-include src="'views/header.html'"></header>
     <!--  content inclusion -->
     <div class="container margin-content-top no-padding-hr">
