added downloads & added hamburger Menu

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 
 <body ng-app="mobiDashBoardApp">
     <!-- header file inclusion -->
-    <!-- <header ng-show="mobileheader" ng-include src="'views/m.header.html'"></header> -->
+    <header ng-show="mobileheader" ng-include src="'views/m.header.html'"></header>
     <header ng-show="showheader" ng-include src="'views/header.html'"></header>
     <!--  content inclusion -->
     <div class="container margin-content-top no-padding-hr">
