icon change and companys staic page

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
     <script src="bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <script src="bower_components/long/dist/long.js"></script>
     <script src="bower_components/jszip/dist/jszip.js"></script>
+    <script src="bower_components/StickyTableHeaders/js/jquery.stickytableheaders.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
